Colab을 통해 생성됨

--- a/오픈소스_데이터_분석_2강.ipynb
+++ b/오픈소스_데이터_분석_2강.ipynb
@@ -23,11 +23,179 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "numbers = [10, 20, 30, 40, 50, 60, 70]\n",
+        "subset1=numbers[0:3]\n",
+        "print(subset1)"
+      ],
       "metadata": {
-        "id": "nd88zvZGroW9"
+        "id": "to3AXpHzDXN7",
+        "outputId": "514de259-8791-4cac-d0f2-19b272f2cc42",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[10, 20, 30]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = [10, 20, 30, 40, 50, 60, 70]\n",
+        "subset2=numbers[2],numbers[5]\n",
+        "print(subset2)"
+      ],
+      "metadata": {
+        "id": "AwdNKJLyG7Yj",
+        "outputId": "592d45cc-cfff-47c0-ccca-f53668d6f84c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(30, 60)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(numbers[2:5:2])"
+      ],
+      "metadata": {
+        "id": "nd88zvZGroW9",
+        "outputId": "d7466a80-327d-4988-e40b-16ea992be6aa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[30, 50]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(numbers[-2::-4\n",
+        "            ])"
+      ],
+      "metadata": {
+        "id": "BYQ_yqYxHw2z",
+        "outputId": "b3677e83-24e1-4536-bd26-0bcbdc31a53c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[60, 20]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(numbers[-3:])"
+      ],
+      "metadata": {
+        "id": "Lxp06su-IOrb",
+        "outputId": "98807df1-6112-4465-bafe-d08a283727f5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[50, 60, 70]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(numbers[::2])"
+      ],
+      "metadata": {
+        "id": "RPEv2TbCI8Sz",
+        "outputId": "1a075738-773c-404a-a174-cea7e56e382f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[10, 30, 50, 70]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(numbers[-1:-6:-2])"
+      ],
+      "metadata": {
+        "id": "mzCI-6oeJOFp",
+        "outputId": "17dfc4ea-f4f9-486c-da3a-6036e9f6d5ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[70, 50, 30]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "matrix = [[1, 2, 3, 4],[5, 6, 7, 8], [9, 10, 11, 12],[13, 14, 15, 16]]"
+      ],
+      "metadata": {
+        "id": "8vGaTpU-Jf5a"
+      },
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -41,7 +209,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "2Y2HEiaiRwAI",
         "outputId": "1a9d28d6-f48d-4f88-d33b-4b5548f76fcc",
@@ -71,7 +239,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "IO8bsKekR0W_",
         "outputId": "f5bc777d-ed7f-40d6-fc5b-15471eecda26",
@@ -103,7 +271,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "60qOf7uxVdAg",
         "outputId": "eb4215e8-9992-4914-8dbf-274407a92dfb",
@@ -140,6 +308,59 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "an4GebbTKAKF",
+        "outputId": "b9bb7243-ad14-43d2-c4b8-87fcee3e70e5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 110
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax. Perhaps you forgot a comma? (ipython-input-2220780910.py, line 8)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-2220780910.py\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    print(i first_two_rows)\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "matrix = [\n",
+        "    [1, 2, 3, 4],\n",
+        "    [5, 6, 7, 8],\n",
+        "    [9, 10, 11, 12],\n",
+        "    [13, 14, 15, 16]\n",
+        "]\n",
+        "\n",
+        "print(i[0:2] for i in matrix)"
+      ],
+      "metadata": {
+        "id": "78-lSem4JnqC",
+        "outputId": "eb0f6f05-b2e5-486a-da0b-05af023e5771",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<generator object <genexpr> at 0x7def7f39e810>\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "eOMufu5SXiAU"
@@ -150,7 +371,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "JpmgdsW9V0CY",
         "outputId": "e9ddfe7a-9b45-48d8-f0b6-a3f76e99d18b",
@@ -178,7 +399,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "cRC8x3_iW0im",
         "outputId": "3f4eef5d-b484-4d40-afe9-ebeb6d53db02",
@@ -208,7 +429,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "MAvimjk6Fqlc",
         "outputId": "394e76b7-dea8-4aae-ee5a-f55eb676aec6",
@@ -237,7 +458,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "HGO8XTxBFqld",
         "outputId": "9fde5c17-da76-4a15-f0f7-7ae4ef4c42d2",
@@ -268,7 +489,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "K-BPhFTUFqle",
         "outputId": "2a467940-edcc-41ee-833b-aa8c573e0852",
@@ -297,7 +518,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "UoTcC8-GFqlf",
         "outputId": "b9b42005-1311-4428-ab40-e21fd980e64e",
@@ -341,7 +562,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "id": "fzO0h6KfFqlg",
         "outputId": "37a6cba4-df43-4ca9-8ede-618e302d0e98",
@@ -454,7 +675,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "id": "eFpmQp3QFqlh"
       },
